snugom/tests/ui/relation_target_not_in_bundle.stderr
error[E0599]: the method `ensure_search_index` exists for struct `Repo<ValidEntity>`, but its trait bounds were not satisfied
  --> tests/ui/relation_target_not_in_bundle.rs:24:1
   |
 8 |   pub struct ValidEntity {
   |   ---------------------- doesn't satisfy `ValidEntity: SearchEntity`
...
24 |   bundle! {
   |  _^
25 | |     service: "test",
26 | |     entities: {
27 | |         ValidEntity => "valid_entities",
...  |
30 | | }
   | |_^ method cannot be called on `Repo<ValidEntity>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `ValidEntity: SearchEntity`
note: the trait `SearchEntity` must be implemented
  --> src/search/mod.rs
   |
   | pub trait SearchEntity: EntityMetadata + DeserializeOwned {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `bundle` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `ensure_search_index` exists for struct `Repo<EntityWithBadTarget>`, but its trait bounds were not satisfied
  --> tests/ui/relation_target_not_in_bundle.rs:24:1
   |
16 |   pub struct EntityWithBadTarget {
   |   ------------------------------ doesn't satisfy `EntityWithBadTarget: SearchEntity`
...
24 |   bundle! {
   |  _^
25 | |     service: "test",
26 | |     entities: {
27 | |         ValidEntity => "valid_entities",
...  |
30 | | }
   | |_^ method cannot be called on `Repo<EntityWithBadTarget>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `EntityWithBadTarget: SearchEntity`
note: the trait `SearchEntity` must be implemented
  --> src/search/mod.rs
   |
   | pub trait SearchEntity: EntityMetadata + DeserializeOwned {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `bundle` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: Invalid relation target in entity. The target collection is not registered in this bundle. Check that the relation's target matches a collection name in the bundle! macro, or add an explicit `target = "collection_name"` to the relation attribute.
  --> tests/ui/relation_target_not_in_bundle.rs:24:1
   |
24 | / bundle! {
25 | |     service: "test",
26 | |     entities: {
27 | |         ValidEntity => "valid_entities",
...  |
30 | | }
   | |_^ evaluation of `test::_` failed inside this call
   |
note: inside `validate_relation_targets`
  --> src/lib.rs
   |
   |             const_panic_invalid_target(entity_name, target, valid_collections);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `snugom::const_panic_invalid_target`
  --> src/lib.rs
   |
   | /     panic!(
   | |         "Invalid relation target in entity. The target collection is not registered in this bundle. \
   | |             Check that the relation's target matches a collection name in the bundle! macro, \
   | |             or add an explicit `target = \"collection_name\"` to the relation attribute."
   | |     )
   | |_____^ the failure occurred here
